# Rust-embedded_ina266

./: Cargo.toml  Readme.md  memory(stm32f103c8).x  memory.x  reset_stm32f103.sh
.cargo/: config
src/: main.rs
